[package]
name = "minesweeper_cli"
version = "1.0.4"
edition = "2021"
build = "build.rs"
license = "MIT"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = [
    "zerocukor https://github.com/zerocukor"
]

[[bin]]
name = "Minesweeper_CLI"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
directories = "6.0.0"
crossterm = { version = "0.29.0", features = ["filedescriptor"]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"